Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1043

Possible typo in messenger.c

    XMLWordPrintableJSON

Details

    Description

      From mailing list: http://qpid.2158936.n2.nabble.com/Possible-typo-in-messenger-c-td7632895.html


      Is this an error:

      if (messenger->flags | PN_FLAGS_CHECK_ROUTES) {
      (line 1498 in messenger.c)?

      Shouldn't it be:
      if (messenger->flags & PN_FLAGS_CHECK_ROUTES) {


      In my opinion this comment is correct but I'm not an expert on messenger so wary of fixing without knowing if some of the code controlled by the if statement really should be running even if PN_FLAGS_CHECK_ROUTES is off. Clearly the code is incorrect as it stands I'm just uncertain if the fix suggested is safe or if the code needs review.

      Attachments

        Issue Links

          Activity

            People

              astitcher Andrew Stitcher
              aconway Alan Conway
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: