PROTON-1043: Fix error in boolean flag check [discovered both by aconway and Coverity)